<resources>
    <string name="app_name">practice_app</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="user_name">用户名：</string>
    <string name="default_user_name">请在此输入用户名</string>
    <string name="default_user_password">请在此输入密码</string>
    <string name="pass_word">密码：</string>
    <string name="log_in">登录</string>
    <string name="log_out">退出登录</string>
    <string name="register">还没有账户？点此注册</string>
</resources>